--- a/g/index.html
+++ b/g/index.html
@@ -6,10 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="styles.css">
     <title>Godkänd</title>
+
+
 </head>
 <body>
 
-  <!-- HTML för att implementera krav A-D -->
+
+<!-- HTML för att implementera krav A-D -->
+
+  <h2></h2>
+  <div id="postsList">
+  </div>
+
+
+
+
 
   <!-- Scripts -->
   <script src="https://unpkg.com/jquery@3.3.1/dist/jquery.js"></script>
